Fix docs on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -313,7 +313,7 @@ a {
 }
 
 .form-doc {
-  max-width: 700px;
+  max-width: min(700px, 100%);
 }
 
 .social-share {
